--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,9 @@
-name = "your-next-app"
+name = "musicbot"
 compatibility_date = "2023-12-01"
 compatibility_flags = ["nodejs_compat"]
 
-# This is the key property that was missing
+# This is the key property for Pages
 pages_build_output_dir = ".vercel/output/static"
 
-# Enable the Node.js compatibility flag
-[node_compat]
-enabled = true
+# The correct format for node_compat is a boolean value
+node_compat = true
